# Sistema-de-comandas

./: .env  .env.example  .gitignore  README.md  alembic.ini  divisao_tarefas.txt  main.py  pyproject.toml
app/: main.py
app/api/: comanda_controller.py  export_controller.py  hash_controller.py
app/api/errors/: exceptions.py  handlers.py
app/api/routes/: product_router.py
app/core/: config.py  database.py  exceptions.py  gerenciador_sequencia.py
app/domains/comanda/: comanda_controller.py  comanda_enums.py  comanda_repository.py  comanda_schema.py  comanda_service.py
app/domains/item_comanda/: item_comanda_controller.py  item_comanda_repository.py  item_comanda_schema.py  item_comanda_service.py
app/domains/mesa/: mesa_controller.py  mesa_enums.py  mesa_models.py  mesa_repository.py  mesa_service.py  mesa_shemas.py
app/domains/produto/: produto_controller.py  produto_repository.py  produto_schema.py  produto_service.py
app/domains/shared/export/: export_controller.py  export_product_controller.py  export_service.py
app/domains/shared/hash/: hash_controller.py  hash_service.py
app/models/: __init__.py  product.py
app/repositories/: TXT.txt  product_repository.py
app/repository/: comanda_repository.py
app/schemas/: comanda_schema.py  product.py
app/services/: comanda_service.py  product_service.py
documentacao/: .$sistema-de-comandas-modelagem.drawio.bkp  sistema-de-comandas-modelagem.drawio
migrations/: env.py
migrations/versions/: 10f545c66d1b_create_products_table.py
scripts/: seed.py  seed_products.py
